SERVER-6795 Correctly optimize reverse sense ExpressionCompare to ExpressionFieldRange.